changed contact form

--- a/index2.html
+++ b/index2.html
@@ -29,15 +29,17 @@
 
 <div class="box boxbody">
 <h2>Contact</h2>
+
+
 <form>
 </form>Name<br>
 <input type="text" name="name"  placeholder="Name.."<br>
-Email<br><br>
+<br>Email<br>
 
 <input type="text" name"email"
 placeholder="Email"<br>
-Message<br>
-<textarea name="message" rows="10" cols"83"> Message </textarea>
+<br>Message<br>
+<textarea name="message" rows="10" cols"200"> Message </textarea>
 
 
 
